--- a/index.html
+++ b/index.html
@@ -2,15 +2,34 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Hunt-Test</title>
+    <meta name="description" content="Define a description of your web page">
+    <meta name="keywords" content="Hunting Hunt Ducks Duck Eider Pro Outfitters  ">
+    <meta name="author" content="Miguel Guijarro">
+    <meta http-equiv="refresh" content="60">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <title>Eider Pro</title>
 
     <link rel="stylesheet" href="css/master.css">
-    
+
     <!--Fonts a utilizar-->
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans+HK:100,300,400,700&display=swap" rel="stylesheet">
+
+
   </head>
   <body>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    <!--Header-->
+    <div class="header-container">
+      <div class="header">
+        <div class="logo">
+          <div class="eider-pro">EIDER PRO</div>
+          <hr class="line-logo">
+          <div class="outfitters">outfitters</div>
+        </div>
+        <div class="slogan"></div>
+        <div class="button"></div>
+      </div>
+    </div>
 
 
   </body>
